[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2.0"
rmcp = "0.1"
tracing = "0.1"
rust_decimal = "1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
